# multimedia

./: .gitignore  Procfile  README.md  commands.sh  create_trees.py  dummy.py  main.py  pyproject.toml  requirements.txt  synsets.csv
.history/: pyproject_20250604120757.toml  pyproject_20250604120855.toml
HySAC/: README.md  requirements.txt  setup.py  snellius_setup.sh  test.py
HySAC/hysac/: losses.py  models.py  optim.py  recall_computation.py  recalls.py  training.py  validation.py
HySAC/scripts/: hysac_train.py  safety_traversal_retrieval.py
dataset/: meta.json  points.json
hierchical_datasets/: preprocess.py
hierchical_datasets/GRIT/: cosne_embeddings.pkl  embeddings.pkl  embeddings_subset.pkl  horopca_embeddings.pkl  meta_data_trees.json
hierchical_datasets/ImageNet/: cosne_embeddings.pkl  embeddings.pkl  embeddings_subset.pkl  horopca_embeddings.pkl  meta_data_tree.json  meta_data_trees.json  read.py
hycoclip/: .gitignore  install_git_lfs.sh  model-zoo.md  requirements.txt  setup_snellius.sh
hycoclip-main/: .gitignore  README.md  setup.py  setup_snellius.sh  traverse.py
hycoclip-main/analysis_results/: compressed_embeddings_grit_50dim.pkl  task1_norm_statistics.txt
hycoclip-main/avik/: main.py  visualize_HyCoCLIP.py
hycoclip-main/configs/: eval_hierarchical_metrics.py  eval_zero_shot_classification.py  eval_zero_shot_retrieval.py  train_clip_vit_l.py  train_clip_vit_s.py  train_hycoclip_vit_l.py  train_meru_vit_b.py
hycoclip-main/hycoclip/: lorentz.py  models.py  tokenizer.py
hycoclip-main/scripts/: README_preprocess.md  evaluate.py  interpolating_points.py  main copy.py  plot_grit_samples.py  plotting_utils.py  preprocess_imagenet.py  projection_methods_analysis.py  redcaps_grounding.py  spatial_norm_dist.py  visualize_embeddings.py  (+1 more)
notebooks/: app.py  umap.ipynb
projection_methods/: create_projections.py  projection_methods_analysis.py
src/: __init__.py  callbacks.py  dataset.py  image_utils.py  layout.py  lorentz.py  main.py  projection.py  tree_utils.py
(+52 files in other folders)
