[project]
name = "multimedia"
version = "0.1.0"
description = "Interactive visualization tool for exploring data in hyperbolic space"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "plotly>=6.1.2",
    "torch==2.2.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = []
