[project]
name = "multimedia"
version = "0.1.0"
description = "Interactive visualization tool for exploring data in hyperbolic space"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "dash-daq>=0.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numba>=0.61.2",
    "pandas>=2.0.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "ruff>=0.11.13",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = []
