[project]
name = "multimedia"
version = "0.1.0"
description = "Interactive visualization tool for exploring data in hyperbolic space"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash-daq",
    "ipykernel",
    "matplotlib",
    "numba",
    "pandas",
    "pillow",
    "plotly",
    "ruff",
    "scikit-learn",
    "seaborn",
    "torch",
    "tqdm",
    "umap-learn",
    "numpy",
    "scipy",
    "torchvision",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = []
